# django-todo

./: docker-compose.yaml  pyproject.toml
tasks/: models.py  urls.py  views.py
tasks/migrations/: 0001_initial.py
tasks/templates/tasks/: delete_task.html  list.html  update_task.html
todo/: settings.py  urls.py
